sample-cluster/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  annotations:
    author: Hendrik Stein <hstein@jastech-solutions.de>
