sample-cluster/base/skipper-deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: skipper-ingress
  namespace: sample-app
  labels:
    application: skipper-ingress
    version: v0.10.180
    component: ingress
spec:
  selector:
    matchLabels:
      application: skipper-ingress
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: skipper-ingress
      namespace: sample-app
      labels:
        application: skipper-ingress
        version: v0.11.1
        component: ingress
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: skipper-ingress
      tolerations:
      - key: dedicated
        operator: Exists
      nodeSelector:
        kubernetes.io/role: worker
      hostNetwork: true
      containers:
      - name: skipper-ingress
        image: registry.opensource.zalan.do/teapot/skipper:v0.18.40
        ports:
        - name: ingress-port
          containerPort: 9999
          hostPort: 9999
        - name: metrics-port
          containerPort: 9911
        args:
        - "skipper"
        - "-kubernetes"
        - "-kubernetes-in-cluster"
        - "-kubernetes-path-mode=path-prefix"
        - "-address=:9999"
        - "-wait-first-route-load"
        - "-proxy-preserve-host"
        - "-serve-host-metrics"
        - "-enable-ratelimits"
        - "-experimental-upgrade"
        - "-metrics-exp-decay-sample"
        - "-reverse-source-predicate"
        - "-lb-healthcheck-interval=3s"
        - "-metrics-flavour=codahale,prometheus"
        - "-enable-connection-metrics"
        - "-max-audit-body=0"
        - "-histogram-metric-buckets=.01,.025,.05,.075,.1,.2,.3,.4,.5,.75,1,2,3,4,5,7,10,15,20,30,60,120,300,600"
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
        readinessProbe:
          httpGet:
            path: /kube-system/healthz
            port: 9999
          initialDelaySeconds: 5
          timeoutSeconds: 5
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
