sample-cluster/base/skipper-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipper-ingress
  namespace: sample-app
  annotations:
    author: Hendrik Stein <hstein@jastech-solutions.de>
  spec:
    rules:
    - host: sample-app.internal
      http:
        paths:
        - backend:
            service:
              name: skipper-ingress
              port:
                number: 80
          pathType: ImplementationSpecific
